# axum-app

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: user.rs
src/config/: db.rs  mod.rs  settings.rs  utils.rs
src/config/logging/: layer.rs
src/core/: authentication.rs  error.rs  http.rs  jwt.rs  mod.rs  permission.rs  response.rs  validate.rs
src/dto/: auth.rs  user.rs
src/entity/: user.rs
src/repository/: user.rs
src/route/: auth.rs  user.rs
src/router/: user.rs
src/service/: auth.rs  user.rs
