[package]
name = "axum-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
dotenvy = "0.15.7"
sea-orm = { version = "1.1.12", features = ["macros", "runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
